配置修改